--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cardinal-token-truffle",
   "version": "1.0.0",
-  "description": "",
+  "description": "A decentralized reputation market dapp for public Twitter identities.",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
@@ -14,5 +14,16 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0"
-  }
+  },
+  "dependencies": {
+    "openzeppelin-solidity": "1.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dappdevelopment/cs359b-twerify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dappdevelopment/cs359b-twerify/issues"
+  },
+  "homepage": "https://github.com/dappdevelopment/cs359b-twerify#readme"
 }
