--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "openzeppelin-solidity": "1.9.0"
+    "openzeppelin-solidity": "1.9.0",
+    "zeppelin-solidity": "^1.7.0"
   },
   "repository": {
     "type": "git",
