--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "openzeppelin-solidity": "1.9.0",
+    "watchify": "^3.11.0",
     "zeppelin-solidity": "^1.7.0"
   },
   "repository": {
