--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "devDependencies": {
+      "browserify": "latest",
+      "gulp": "3.7.0",
+      "vinyl-source-stream": "latest",
+      "watchify": "latest"
+    },
+    "gulp": "^3.9.1",
+    "lite-server": "^2.3.0",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "browserify": "^16.2.2",
     "openzeppelin-solidity": "1.9.0",
     "watchify": "^3.11.0",
     "zeppelin-solidity": "^1.7.0"
