--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "lite-server"
+    "start": "lite-server",
+    "dev": "nodemon app/server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,11 +24,16 @@
     "gulp-sourcemaps": "^2.6.4",
     "lite-server": "^2.3.0",
     "lodash.assign": "^4.2.0",
+    "nodemon": "^1.17.5",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "browserify": "^16.2.2",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "mongodb": "^3.0.10",
     "openzeppelin-solidity": "1.9.0",
     "watchify": "^3.11.0",
     "zeppelin-solidity": "^1.7.0"
