--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
+    "multer": "^1.3.0",
     "openzeppelin-solidity": "1.9.0",
     "watchify": "^3.11.0",
     "zeppelin-solidity": "^1.7.0"
