--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "browserify": "^16.2.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
