--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "materialize-css": "^1.0.0-rc.1",
     "mongodb": "^3.0.10",
     "multer": "^1.3.0",
     "openzeppelin-solidity": "1.9.0",
